Fixed visible border radius on dropdown menu

--- a/static/src/sass/blocks/header/_main-nav.scss
+++ b/static/src/sass/blocks/header/_main-nav.scss
@@ -46,7 +46,7 @@
     visibility: hidden; /* hides sub-menu */
     opacity: 0;
     position: absolute;
-    top: 100%;
+    top: calc(100% - 2px);
     left: 0;
     width: 130%;
     border-radius: 2px;
